--- a/CreateSpaces.html
+++ b/CreateSpaces.html
@@ -990,11 +990,11 @@
                             class="hide-text">Notifications</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
+                    <a href="app.html" class="nav-link"><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
                             class="hide-text">Apps</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><img src="/assets/images/home/cloud.svg" alt="" /><span
+                    <a href="CloudStorage.html" class="nav-link"><img src="/assets/images/home/cloud.svg" alt="" /><span
                             class="hide-text">Cloud Storage</span></a>
                 </li>
                 <li class="nav-item">
@@ -1002,7 +1002,7 @@
                             class="hide-text">Calendar</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link"><img src="/assets/images/home/user-add.svg" alt="" /><span
+                    <a href="referrals.html" class="nav-link"><img src="/assets/images/home/user-add.svg" alt="" /><span
                             class="hide-text">Referrals</span></a>
                 </li>
             </ul>
