--- a/app.html
+++ b/app.html
@@ -980,7 +980,7 @@
                         </span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="trash.html" class="nav-link "><img src="/assets/images/home/trash.svg" alt="" /><span
+                    <a href="trash.html" class="nav-link"><img src="/assets/images/home/trash.svg" alt="" /><span
                             class="hide-text">Trash
                         </span></a>
                 </li>
@@ -991,7 +991,7 @@
                     Arushi
                 </p>
                 <li class="nav-item mt-1">
-                    <a href="MySetting.html" class="nav-link active"><img src="/assets/images/home/user-sidebar.svg"
+                    <a href="MySetting.html" class="nav-link "><img src="/assets/images/home/user-sidebar.svg"
                             alt="" /><span class="hide-text">My Settings</span></a>
                 </li>
                 <li class="nav-item">
@@ -999,11 +999,11 @@
                             alt="" /><span class="hide-text">Workspaces</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="NotificationSetting.html" class="nav-link "><img src="/assets/images/home/not_clock.svg" alt="" /><span
-                            class="hide-text">Notifications</span></a>
+                    <a href="NotificationSetting.html" class="nav-link"><img src="/assets/images/home/not_clock.svg"
+                            alt="" /><span class="hide-text">Notifications</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="app.html" class="nav-link"><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
+                    <a href="app.html" class="nav-link  active "><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
                             class="hide-text">Apps</span></a>
                 </li>
                 <li class="nav-item">
@@ -1020,216 +1020,89 @@
                 </li>
             </ul>
         </aside>
-        <div class="my-setting">
-            <button class=" d-flex sidebar-button-main border-0 bg-transparent d-none my-2"
-            id="sidebartoggle">
-            <img src="/assets/images/menu2.svg" alt="" />
-        </button>
-            <div class="row">
-                
-                <div class="col-sm-3 content-one p-5">
-                    <h1>Preferences</h1>
-                    <p>Manage your in-app preferences.</p>
-                </div>
-                <div class="col-sm-9 content-two p-5 ">
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <div class="d-flex align-items-center gap-2 mb-1">
-                                    <h5>Flyout Toast Message </h5>
-                                    <img src="/assets/images/home/idea.svg" alt="">
-                                </div>
-                                <p>When performing actions, toast messages may appear in the bottom
-                                    left-hand of your screen. You can disable that here.</p>
-                            </label>
-                        </div>
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <div class="d-flex align-items-center gap-2 mb-1">
-                                    <h5>Don't post comments with </h5>
-                                    <span class="border border-1 px-1 rounded-2">Enter</span>
-                                </div>
-                                <p>Use<span class="border border-1 px-1 rounded-2">Ctrl + Enter</span>
-                                    to send
-                                    comments instead of just  <span
-                                        class="border border-1 px-1 rounded-2">Enter</span> </p>
-                            </label>
-                        </div>
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Markdown</h5>
-                                <p>You can disable <a href="">Markdown</a> (shortcuts when typing) by
-                                    turning it off here.</p>
-                            </label>
-                        </div>
 
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Hotkeys</h5>
-                                <p>Use <a href="">Hotkeys</a> to quickly navigate through ARCerp without
-                                    using your mouse.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Notepad</h5>
-                                <p>Turn this off to hide the  <a href="">notepad</a> in the bottom right
-                                    corner of your screen.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">High Contrast Mode</h5>
-                                <p>Enabling this mode adjusts contrast to make ARCerp easier on your
-                                    eyes (Recommended for Windows and low resolution monitors).</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Dark Mode</h5>
-                                <p>Don't like the brightness? Go to the dark side of ARCerp.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Show quotes</h5>
-                                <p>Show celebratory quotes when you clear all your notifications or load
-                                    certain pages</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Show Celebrations</h5>
-                                <p>Show confetti celebrations when you clear My Work, clear all
-                                    notifications, or complete a Goal Target.</p>
-                            </label>
-                        </div>
-
-                        <hr>
+        <div class="app-setting px-5 py-3">
+            <button class=" d-flex sidebar-button-main border-0 bg-transparent d-none my-2" id="sidebartoggle">
+                <img src="/assets/images/menu2.svg" alt="" />
+            </button>
+            <div class="main-content">
+                <div class="content-one">
+                    <h1>API Token</h1>
+                    <div
+                        class="border generate-button border-1 rounded-2 d-flex justify-content-between col-lg-6 col-sm-5 align-items-center p-1">
+                        <p>Click Generate</p>
+                        <button class="btn-reverse border border-1">Generate</button>
                     </div>
                 </div>
-            </div>
-            <div class="row content-footer">
-                <div class="col-sm-3 p-5">
-                    <h4>Proceed with caution.</h4>
-                    <p>Proceed with caution.</p>
-                </div>
-                <div class="col-sm-9 p-5 pb-0">
-                    <div class="d-flex justify-content-between flex-wrap">
-                        <p>Log out all sessions including any session on mobile, iPad, and other
-                            browsers</p>
-                        <p>Log out of all sessions</p>
-                    </div>
-                    <div class="d-flex justify-content-end">
-                        <button class="btn mt-2 mb-3 ">Delete account</button>
+                <div class="content-two my-4">
+                    <h2>Custom Apps</h2>
+                    <div class="d-flex flex-wrap">
+                        <img src="assets/images/home/idea.svg" alt="">
+                        <p>Do you want to create your own app? </p>
+                        <a href="">Check out the API Documentation</a>
                     </div>
                 </div>
-            </div>
-            <div>
+                <div class="content-three">
+                    <p>You currently do not have any apps authorized</p>
+                    <div class="border border-1 new-button d-flex justify-content-center align-items-center">
+                        <span>+ Create new app</span>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap JavaScript Libraries -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#sidebartoggle").click(function () {
-                $(".sidebarnew").toggleClass("inactive");
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $("#sidebartoggle").click(function () {
+                    $(".sidebarnew").toggleClass("inactive");
+                });
             });
-        });
-        const openButton = document.querySelector('#openSidebar-new');
-        const closeButton = document.querySelector('.close-button-new');
-        const sidebar = document.querySelector('.sidebar-new');
+            const openButton = document.querySelector('#openSidebar-new');
+            const closeButton = document.querySelector('.close-button-new');
+            const sidebar = document.querySelector('.sidebar-new');
 
-        openButton.addEventListener('click', () => {
-            sidebar.classList.add('show');
-            closeButton.classList.add('show');
-        });
-
-        closeButton.addEventListener('click', () => {
-            sidebar.classList.remove('show');
-            closeButton.classList.remove('show');
-        });
-        function openReminderTab() {
-            var reminderTab = new bootstrap.Tab(document.querySelector('#Reminder-tab'));
-            reminderTab.show();
-
-        }
-        function openTabsTab() {
-            var reminderTab = new bootstrap.Tab(document.querySelector('#Task-tab'));
-            reminderTab.show();
-        }
-        function openDocTab() {
-            var reminderTab = new bootstrap.Tab(document.querySelector('#Doc-tab'));
-            reminderTab.show();
-        }
-        document.addEventListener('DOMContentLoaded', function () {
-            const menuToggle = document.getElementById('menu-toggle');
-            const sidebarHeader = document.querySelector('.sidebar-header');
-
-            menuToggle.addEventListener('click', function () {
-                sidebarHeader.classList.toggle('menu-expanded');
+            openButton.addEventListener('click', () => {
+                sidebar.classList.add('show');
+                closeButton.classList.add('show');
             });
-        });
 
-    </script>
-    <script src="./js/script.js"></script>
+            closeButton.addEventListener('click', () => {
+                sidebar.classList.remove('show');
+                closeButton.classList.remove('show');
+            });
+            function openReminderTab() {
+                var reminderTab = new bootstrap.Tab(document.querySelector('#Reminder-tab'));
+                reminderTab.show();
+
+            }
+            function openTabsTab() {
+                var reminderTab = new bootstrap.Tab(document.querySelector('#Task-tab'));
+                reminderTab.show();
+            }
+            function openDocTab() {
+                var reminderTab = new bootstrap.Tab(document.querySelector('#Doc-tab'));
+                reminderTab.show();
+            }
+            document.addEventListener('DOMContentLoaded', function () {
+                const menuToggle = document.getElementById('menu-toggle');
+                const sidebarHeader = document.querySelector('.sidebar-header');
+
+                menuToggle.addEventListener('click', function () {
+                    sidebarHeader.classList.toggle('menu-expanded');
+                });
+            });
+
+        </script>
+        <script src="./js/script.js"></script>
 </body>
 
 </html>
