--- a/import.html
+++ b/import.html
@@ -971,8 +971,8 @@
                             class="hide-text">Spaces</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="import.html" class="nav-link active "><img src="/assets/images/home/import.svg" alt="" /><span
-                            class="hide-text">Imports / Exports</span></a>
+                    <a href="import.html" class="nav-link active "><img src="/assets/images/home/import.svg"
+                            alt="" /><span class="hide-text">Imports / Exports</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="AppCenter.html" class="nav-link "><img src="/assets/images/home/logo-sidebar.svg"
@@ -999,8 +999,8 @@
                             alt="" /><span class="hide-text">Workspaces</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="NotificationSetting.html" class="nav-link "><img src="/assets/images/home/not_clock.svg" alt="" /><span
-                            class="hide-text">Notifications</span></a>
+                    <a href="NotificationSetting.html" class="nav-link "><img src="/assets/images/home/not_clock.svg"
+                            alt="" /><span class="hide-text">Notifications</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link"><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
@@ -1030,8 +1030,15 @@
                 <p class="mt-3">Easily import your data directly from another tool or by using a CSV
                     file. You can
                     also export all of your Workspace data. Learn more</p>
-                <button class="btn-reverse">Start Export</button>
-                <button class="btn p-1 mx-2">Start Import</button>
+                <label class="btn p-1 mx-1" style="cursor: pointer;">
+                    Start Export
+                    <input type="file" style="display: none;" />
+                </label>
+                <label class="btn p-1 mx-1" style="cursor: pointer;">
+                    Start Import
+                    <input type="file" style="display: none;" />
+                </label>
+
             </div>
             <div class="content-two ">
                 <img src="/assets/images/home/import-content.svg" alt="">
