--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                     <a class="nav-link" href="MySetting.html">My Settings</a>
                     <a class="nav-link" href="MyWorkSpace.html">My Workspaces</a>
                     <a class="nav-link" href="NotificationSetting.html">Notifications</a>
+                    <a class="nav-link" href="app.html">Apps</a>
+                    <a class="nav-link" href="CloudStorage.html">Cloud Storage</a>
+                    <a class="nav-link" href="referrals.html"> Referrals</a>
                 </nav>
              </div>
         </div>
