--- a/referrals.html
+++ b/referrals.html
@@ -980,8 +980,8 @@
                         </span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="trash.html" class="nav-link "><img src="/assets/images/home/trash.svg" alt="" /><span
-                            class="hide-text">Trash
+                    <a href="trash.html" class="nav-link  "><img src="/assets/images/home/trash.svg"
+                            alt="" /><span class="hide-text">Trash
                         </span></a>
                 </li>
             </ul>
@@ -991,7 +991,7 @@
                     Arushi
                 </p>
                 <li class="nav-item mt-1">
-                    <a href="MySetting.html" class="nav-link active"><img src="/assets/images/home/user-sidebar.svg"
+                    <a href="MySetting.html" class="nav-link "><img src="/assets/images/home/user-sidebar.svg"
                             alt="" /><span class="hide-text">My Settings</span></a>
                 </li>
                 <li class="nav-item">
@@ -999,8 +999,8 @@
                             alt="" /><span class="hide-text">Workspaces</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="NotificationSetting.html" class="nav-link "><img src="/assets/images/home/not_clock.svg" alt="" /><span
-                            class="hide-text">Notifications</span></a>
+                    <a href="NotificationSetting.html" class="nav-link"><img src="/assets/images/home/not_clock.svg"
+                            alt="" /><span class="hide-text">Notifications</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="app.html" class="nav-link"><img src="/assets/images/home/add-sidebar.svg" alt="" /><span
@@ -1015,165 +1015,45 @@
                             class="hide-text">Calendar</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="referrals.html" class="nav-link"><img src="/assets/images/home/user-add.svg" alt="" /><span
+                    <a href="referrals.html" class="nav-link active"><img src="/assets/images/home/user-add.svg" alt="" /><span
                             class="hide-text">Referrals</span></a>
                 </li>
             </ul>
         </aside>
-        <div class="my-setting">
-            <button class=" d-flex sidebar-button-main border-0 bg-transparent d-none my-2"
-            id="sidebartoggle">
-            <img src="/assets/images/menu2.svg" alt="" />
-        </button>
-            <div class="row">
-                
-                <div class="col-sm-3 content-one p-5">
-                    <h1>Preferences</h1>
-                    <p>Manage your in-app preferences.</p>
+
+        <style>
+
+        </style>
+        <div class="referrals p-4">
+
+            <button class=" d-flex sidebar-button-main border-0 bg-transparent d-none my-2" id="sidebartoggle">
+                <img src="/assets/images/menu2.svg" alt="" />
+            </button>
+            <h1>Referrals</h1>
+
+            <div class="main-content  align-items-center justify-content-center ">
+                <div class="contain-center-box  text-center ">
+                    <img src="/assets/images/home/logo-sidebar.svg" alt="">
+                    <h4>Love ARCerp?</h4>
+                    <h4>Share with your colleagues and friends to give them 10% off!</h4>
+                    <button class="btn my-3">
+                        <img src="assets/images/home/link.svg" alt="">
+                        Copy Shareable Link
+                    </button>
+                    <p>share link via</p>
+                    <div class="d-flex gap-2 justify-content-center my-3">
+                        <div class="border border-1 px-3 py-2 rounded-3">
+                            <img src="assets/images/home/x-twitter.svg" alt="">
+                        </div>
+                        <div class="border border-1 px-3 py-2 rounded-3">
+                            <img src="assets/images/home/linkedin.svg" alt="">
+                        </div>
+                        <div class="border border-1 px-3 py-2 rounded-3">
+                            <img src="assets/images/home/facebook.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Check out our <a href="">community</a> resources for even more ways to get involved </p>
                 </div>
-                <div class="col-sm-9 content-two p-5 ">
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <div class="d-flex align-items-center gap-2 mb-1">
-                                    <h5>Flyout Toast Message </h5>
-                                    <img src="/assets/images/home/idea.svg" alt="">
-                                </div>
-                                <p>When performing actions, toast messages may appear in the bottom
-                                    left-hand of your screen. You can disable that here.</p>
-                            </label>
-                        </div>
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <div class="d-flex align-items-center gap-2 mb-1">
-                                    <h5>Don't post comments with </h5>
-                                    <span class="border border-1 px-1 rounded-2">Enter</span>
-                                </div>
-                                <p>Use<span class="border border-1 px-1 rounded-2">Ctrl + Enter</span>
-                                    to send
-                                    comments instead of just  <span
-                                        class="border border-1 px-1 rounded-2">Enter</span> </p>
-                            </label>
-                        </div>
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Markdown</h5>
-                                <p>You can disable <a href="">Markdown</a> (shortcuts when typing) by
-                                    turning it off here.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Hotkeys</h5>
-                                <p>Use <a href="">Hotkeys</a> to quickly navigate through ARCerp without
-                                    using your mouse.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Notepad</h5>
-                                <p>Turn this off to hide the  <a href="">notepad</a> in the bottom right
-                                    corner of your screen.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">High Contrast Mode</h5>
-                                <p>Enabling this mode adjusts contrast to make ARCerp easier on your
-                                    eyes (Recommended for Windows and low resolution monitors).</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox"
-                                id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Dark Mode</h5>
-                                <p>Don't like the brightness? Go to the dark side of ARCerp.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Show quotes</h5>
-                                <p>Show celebratory quotes when you clear all your notifications or load
-                                    certain pages</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch d-flex  ">
-                            <input class="form-check-input me-3" type="checkbox" id="flexSwitchCheckDefault"
-                                checked>
-                            <label class="form-check-label" for="flexSwitchCheckDefault">
-                                <h5 class="mb-1">Show Celebrations</h5>
-                                <p>Show confetti celebrations when you clear My Work, clear all
-                                    notifications, or complete a Goal Target.</p>
-                            </label>
-                        </div>
-
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="row content-footer">
-                <div class="col-sm-3 p-5">
-                    <h4>Proceed with caution.</h4>
-                    <p>Proceed with caution.</p>
-                </div>
-                <div class="col-sm-9 p-5 pb-0">
-                    <div class="d-flex justify-content-between flex-wrap">
-                        <p>Log out all sessions including any session on mobile, iPad, and other
-                            browsers</p>
-                        <p>Log out of all sessions</p>
-                    </div>
-                    <div class="d-flex justify-content-end">
-                        <button class="btn mt-2 mb-3 ">Delete account</button>
-                    </div>
-                </div>
-            </div>
-            <div>
             </div>
         </div>
     </div>
