--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                                     class="password-icon" src=" assets/images/Container.svg" alt="" /></span>
                             <input type="text" class="form-control border-0 " placeholder="Enter password"
                                 aria-label="Enter password" aria-describedby="basic-addon1">
-                            <a href=""
+                            <a href="forgetpassword.html"
                                 class="text-decoration-none input-group-text forget-password-text border-0">Forgot
                                 Password?</a>
                         </div>
